# aged-fullstack-template

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_template.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/bootstrap/: __init__.py  app.py  lifespan.py  routing.py
backend/app/core/: config.py  deps.py  errors.py  response.py
backend/app/db/: __init__.py
backend/app/db/models/: __init__.py  example.py
backend/app/integrations/: __init__.py  cache_client.py
backend/app/modules/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/modules/example/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  worker.py
backend/app/modules/health/: router.py  service.py
backend/app/modules/users/: __init__.py  models.py  repository.py  service.py
backend/app/platform/config/: __init__.py  settings.py
backend/app/platform/db/: __init__.py  model_registry.py  session.py
backend/app/scripts/: __init__.py  migrate.py
backend/app/workers/: __init__.py  example_worker.py
backend/tests/: conftest.py
backend/tests/bootstrap/: test_app_factory.py
backend/tests/contracts/: test_auth.py  test_example.py  test_health.py
backend/tests/services/: test_config.py  test_example_repository.py  test_example_service.py  test_users.py
(+77 files in other folders)
