[project]
name = "aged-fullstack-template-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.39",
  "alembic>=1.15.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "fakeredis>=2.31.0",
  "pyjwt>=2.10.0",
  "passlib>=1.7.4",
  "argon2-cffi>=25.1.0",
  "email-validator>=2.2.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
dev-api = "app.main:run_dev"
run-api = "app.main:run"
migrate = "app.scripts.migrate:main"
